--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body{
     background-color: rgb(238, 95, 52);
 }
+.cabeçalho{
+background-image: -moz-linear-gradient(rgb(255, 187, 0),rgb(255, 230, 0));
+}
