--- a/style.css
+++ b/style.css
@@ -1,43 +1,45 @@
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 2%;
+    padding: 2%;
     }
-    
     .cabeçalho{
-    background-color: rgb(240, 24, 24);
-    color: black;
-    display: flex;
-    justify-content: space-around;
+    background-color: rgb(226, 157, 205);
+    color: rgb(0, 0, 0);
+    display:flex;
     align-items: center;
-    padding: 24px 0;
+    padding: 50px 0;
     }
-    
     .cabeçalho_imagem{
-    width: 12%;
+    width: 20%;
     }
-    
     .cabeçalho_titulo{
-    font-size: 35px;
+    font-size: 50px;
     }
-    
     .cabeçalho_lista_item{
-    margin: 25px 0px 25px 0px;
-    font-size: 17px;
+    margin: 5px 10px 30px 5px;
+    font-size: 20px;
     }
-    
     .apresentaçao_trabalho{
-    background-image: linear-gradient(rgb(240, 24, 24), #ff7850);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 24px 0;
+    background-image: linear-gradient(rgb(226, 157, 205), #f361d3);
+    padding: 0px;
     }
-    
     .titulo_apresentaçao_trabalho{
-    background-color: #ff7850;
-    font-size: 25px;
+    font-size: 30px;
+    }
+    .img1{
+    width: 40%;
+    }
+    .img2{
+    width: 40%;
+    }
+    .img3{
+    width: 40%;
+    }
+    .img4{
+    width: 40%;
+    }
+    .img5{
+    width: 40%;
     }
     
-    .imagem_arvore{
-    width: 5%;
-    }
+    
