--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     }
    
     .cabeçalho{
-    background-color: rgb(226, 157, 205);
+    background-color: rgb(255, 170, 136);
     color: rgb(0, 0, 0);
     display:flex;
     align-items: center;
@@ -24,7 +24,7 @@
     }
   
     .apresentaçao_trabalho{
-    background-image: linear-gradient(rgb(226, 157, 205), #f361d3);
+    background-image: linear-gradient(rgb(255, 170, 136), #ff975b);
     padding: 0px;
     }
   
