--- a/style.css
+++ b/style.css
@@ -2,50 +2,51 @@
     margin: 2%;
     padding: 2%;
     }
-   
+    
     .cabeçalho{
-    background-color: rgb(255, 170, 136);
+    background-color: rgb(226, 157, 205);
     color: rgb(0, 0, 0);
     display:flex;
     align-items: center;
     padding: 50px 0;
     }
-   
+    
     .cabeçalho_imagem{
-    width:15%;
+    width: 20%;
     }
+    
     .cabeçalho_titulo{
-    font-size: 70px;
+    font-size: 50px;
+    background-color: linear-gradient(rgb(226, 157, 205), #f361d3);
     }
     
     .cabeçalho_lista_item{
     margin: 5px 10px 30px 5px;
-    font-size: 30px;
+    font-size: 20px;
     }
-  
+    
     .apresentaçao_trabalho{
-    background-image: linear-gradient(rgb(248, 171, 141), #ff975b);
+    background-image: linear-gradient(rgb(226, 157, 205), #f361d3);
     padding: 0px;
     }
-  
+    
     .titulo_apresentaçao_trabalho{
-    font-size: 40px;
+    background-image: linear-gradient(rgb(226, 157, 205), #f361d3);
+    padding: 0px;
+    font-size: 30px;
     }
-  
-    .img1{
+    
+    .imagem {
     width: 20%;
     }
-    .img2{
-    width: 40%;
+    .Artigos.html{
+    background-color: rgb(226, 157, 205);
+    color: rgb(0, 0, 0);
+    display:flex;
+    align-items: center;
+    padding: 50px 0;
     }
-    .img3{
-    width: 40%;
+
+    .tamanho_texto{
+        font-size: 15px;
     }
-    .img4{
-    width: 40%;
-    }
-    .img5{
-    width: 40%;
-    }
-    
-    
