--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     }
     
     .cabeçalho{
-    background-color: rgb(226, 157, 205);
+    background-color: rgb(69, 117, 250);
     color: rgb(0, 0, 0);
     display:flex;
     align-items: center;
@@ -17,7 +17,7 @@
     
     .cabeçalho_titulo{
     font-size: 50px;
-    background-color: linear-gradient(rgb(226, 157, 205), #f361d3);
+    background-color: linear-gradient(rgb(69, 117, 250), #6783ff);
     }
     
     .cabeçalho_lista_item{
@@ -26,12 +26,12 @@
     }
     
     .apresentaçao_trabalho{
-    background-image: linear-gradient(rgb(226, 157, 205), #f361d3);
+    background-image: linear-gradient(rgb(69, 117, 250), #6783ff);
     padding: 0px;
     }
     
     .titulo_apresentaçao_trabalho{
-    background-image: linear-gradient(rgb(226, 157, 205), #f361d3);
+    background-image: linear-gradient(rgb(69, 117, 250), #6783ff);
     padding: 0px;
     font-size: 30px;
     }
@@ -40,7 +40,7 @@
     width: 20%;
     }
     .Artigos.html{
-    background-color: rgb(226, 157, 205);
+    background-color: rgb(69, 117, 250);
     color: rgb(0, 0, 0);
     display:flex;
     align-items: center;
