--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     }
     
     .apresentaçao_trabalho{
-    background-image: linear-gradient(rgb(69, 117, 250), #6783ff);
+    background-image: linear-gradient(rgb(255, 119, 237), #ffa1db);
     padding: 0px;
     }
     
